[package]
name = "hypertext"

authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/hypertext"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


    [package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true


[features]
default = ["alloc"]

alloc = ["dep:html-escape", "dep:itoa", "dep:ryu"]


#warp = ["alloc", "dep:warp"]actix-web = ["actix-web-dep", "alloc", "dep:futures-util"]
axum = ["alloc", "dep:axum-core", "dep:http"]

[dependencies]
hypertext-macros.workspace = true

html-escape = { workspace = true, optional = true }
itoa = { version = "1", optional = true }
ryu = { version = "1", optional = true }

actix-web-dep = { package = "actix-web", version = "4", optional = true, default-features = false }
axum-core = { version = "0.4", optional = true }
futures-util = { version = "0.3.0", optional = true, default-features = false }
http = { version = "1", optional = true }
warp = { version = "0.3.6", optional = true, default-features = false }
